# analysisServiceAreum

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: acceleration.py  analysis.py
app/services/: analysis.py  insights.py
app/utils/: metrics.py  patterns.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_services/: test_analysis.py
tests/test_utils/: test_metrics.py  test_patterns.py
