[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "areum-analysis-service"
version = "0.1.0"
description = "AI-powered health analysis for Areum Health"
readme = "README.md"
authors = [
    {name = "Volker Leukhardt", email = "volker.leukhardt@gmail.com"}
]
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]